--- a/AppMAUIGallery/Views/Menu.xaml
+++ b/AppMAUIGallery/Views/Menu.xaml
@@ -25,7 +25,7 @@
 
             <Label Text="Extra" />
 
-            <Label Margin="0,0,0,10" Text="Créditos" />
+            <Label Text="Créditos" />
 
             <VerticalStackLayout x:Name="MenuContainer" />
         </VerticalStackLayout>
