--- a/AppMAUIGallery/Views/Components/Mains/ButtonPage.xaml
+++ b/AppMAUIGallery/Views/Components/Mains/ButtonPage.xaml
@@ -11,17 +11,17 @@
             BorderColor="LightBlue"
             BorderWidth="2"
             Clicked="Button_Clicked"
+            ContentLayout="left,0"
             CornerRadius="22"
             FontAttributes="Bold"
+            HeightRequest="60"
             HorizontalOptions="Center"
+            ImageSource="dotnet_bot.png"
             Pressed="Button_Pressed"
             Released="Button_Released"
             Text="Clique-me"
-            TextColor="Black" 
-            ImageSource="dotnet_bot.png"
-            HeightRequest="60"
-            WidthRequest="180"
-            ContentLayout="left,0"/>
+            TextColor="Black"
+            WidthRequest="180" />
 
         <Frame
             Margin="20"
