--- a/AppJogoForca/MainPage.xaml
+++ b/AppJogoForca/MainPage.xaml
@@ -1,36 +1,68 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppJogoForca.MainPage">
+<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage
+    x:Class="AppJogoForca.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="MainPage">
+    <FlexLayout Direction="Column" JustifyContent="SpaceBetween">
+        <Image
+            x:Name="imgMain"
+            Margin="0,20,0,0"
+            HeightRequest="200"
+            HorizontalOptions="Center"
+            Source="forca1.png" />
 
-    <ScrollView>
+        <Label
+            x:Name="lblTips"
+            Padding="10"
+            FontSize="32"
+            HorizontalOptions="Center" />
+
+        <Label
+            x:Name="lblText"
+            Padding="10"
+            CharacterSpacing="5"
+            FontSize="48"
+            HorizontalOptions="Center"
+            Text="" />
+
         <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            x:Name="keyboardContainer"
+            Margin="0,0,0,20"
+            Spacing="5">
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="5">
+                <Button Clicked="OnButtonClicked" Text="Q" />
+                <Button Clicked="OnButtonClicked" Text="W" />
+                <Button Clicked="OnButtonClicked" Text="E" />
+                <Button Clicked="OnButtonClicked" Text="R" />
+                <Button Clicked="OnButtonClicked" Text="T" />
+                <Button Clicked="OnButtonClicked" Text="Y" />
+                <Button Clicked="OnButtonClicked" Text="U" />
+                <Button Clicked="OnButtonClicked" Text="I" />
+                <Button Clicked="OnButtonClicked" Text="O" />
+                <Button Clicked="OnButtonClicked" Text="P" />
+            </HorizontalStackLayout>
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="5">
+                <Button Clicked="OnButtonClicked" Text="A" />
+                <Button Clicked="OnButtonClicked" Text="S" />
+                <Button Clicked="OnButtonClicked" Text="D" />
+                <Button Clicked="OnButtonClicked" Text="F" />
+                <Button Clicked="OnButtonClicked" Text="G" />
+                <Button Clicked="OnButtonClicked" Text="H" />
+                <Button Clicked="OnButtonClicked" Text="J" />
+                <Button Clicked="OnButtonClicked" Text="K" />
+                <Button Clicked="OnButtonClicked" Text="L" />
+            </HorizontalStackLayout>
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="5">
+                <Button Clicked="OnButtonClicked" Text="Z" />
+                <Button Clicked="OnButtonClicked" Text="X" />
+                <Button Clicked="OnButtonClicked" Text="C" />
+                <Button Clicked="OnButtonClicked" Text="V" />
+                <Button Clicked="OnButtonClicked" Text="B" />
+                <Button Clicked="OnButtonClicked" Text="N" />
+                <Button Clicked="OnButtonClicked" Text="M" />
+            </HorizontalStackLayout>
         </VerticalStackLayout>
-    </ScrollView>
 
+    </FlexLayout>
 </ContentPage>
