--- a/AppJogoForca/Resources/Styles/Colors.xaml
+++ b/AppJogoForca/Resources/Styles/Colors.xaml
@@ -5,11 +5,11 @@
     <!--  Note: For Android please see also Platforms\Android\Resources\values\colors.xml  -->
 
     <Color x:Key="Primary">#FFFFFF</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
+    <Color x:Key="PrimaryDark">#FFFFFF</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Tertiary">#B2B2B2</Color>
     <Color x:Key="Hits">#1BB55C</Color>
     <Color x:Key="Misses">#E74C3C</Color>
 
