--- a/AppMAUIGallery/Views/Lists/CollectionViewPage.xaml
+++ b/AppMAUIGallery/Views/Lists/CollectionViewPage.xaml
@@ -4,70 +4,88 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="CollectionViewPage">
-
-    <RefreshView RefreshColor="#512BD4" Refreshing="RefreshView_Refreshing">
-        <CollectionView
-            x:Name="collectionViewControl"
-            IsGrouped="True"
-            RemainingItemsThreshold="-1"
-            RemainingItemsThresholdReached="collectionViewControl_RemainingItemsThresholdReached">
-            <CollectionView.GroupHeaderTemplate>
-                <DataTemplate>
-                    <HorizontalStackLayout Padding="10" BackgroundColor="Gray">
-                        <Label Text="Início" />
-                        <Label Text="{Binding CompanyName}" />
-                    </HorizontalStackLayout>
-                </DataTemplate>
-            </CollectionView.GroupHeaderTemplate>
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <VerticalStackLayout Padding="10">
-                        <Label
-                            Margin="0,10"
-                            FontAttributes="Bold"
-                            FontSize="32"
-                            Text="{Binding Name}" />
-                        <Label Text="{Binding Description}" TextColor="Gray" />
-                        <HorizontalStackLayout>
-                            <Border
-                                Margin="0,20"
-                                Padding="5"
-                                BackgroundColor="White"
-                                Stroke="#512BD4">
-                                <Border.Shadow>
-                                    <Shadow
-                                        Brush="#512BD4"
-                                        Opacity="1"
-                                        Radius="5" />
-                                </Border.Shadow>
-                                <Label Text="{Binding LaunchYear}" />
-                            </Border>
-                            <Border
-                                Margin="20"
-                                Padding="5"
-                                BackgroundColor="White"
-                                Stroke="#512BD4">
-                                <Border.Shadow>
-                                    <Shadow
-                                        Brush="#512BD4"
-                                        Opacity="1"
-                                        Radius="5" />
-                                </Border.Shadow>
-                                <Label Text="{Binding Duration}" />
-                            </Border>
+    <Grid>
+        <RefreshView RefreshColor="#512BD4" Refreshing="RefreshView_Refreshing">
+            <CollectionView
+                x:Name="collectionViewControl"
+                IsGrouped="True"
+                RemainingItemsThreshold="-1"
+                RemainingItemsThresholdReached="collectionViewControl_RemainingItemsThresholdReached"
+                SelectionChanged="CollectionViewControl_SelectionChanged"
+                SelectionMode="Multiple">
+                <CollectionView.Header>
+                    <SearchBar
+                        x:Name="search"
+                        Margin="10"
+                        Placeholder="Pesquisar filme" />
+                </CollectionView.Header>
+                <CollectionView.GroupHeaderTemplate>
+                    <DataTemplate>
+                        <HorizontalStackLayout Padding="10" BackgroundColor="LightGray">
+                            <Label Text="Início " />
+                            <Label Text="{Binding CompanyName}" />
                         </HorizontalStackLayout>
-                        <BoxView HeightRequest="1" Color="#512BD4" />
-                    </VerticalStackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-            <CollectionView.GroupFooterTemplate>
-                <DataTemplate>
-                    <HorizontalStackLayout Padding="10" BackgroundColor="#F2F2F2">
-                        <Label Text="Fim" />
-                        <Label Text="{Binding CompanyName}" />
-                    </HorizontalStackLayout>
-                </DataTemplate>
-            </CollectionView.GroupFooterTemplate>
-        </CollectionView>
-    </RefreshView>
+                    </DataTemplate>
+                </CollectionView.GroupHeaderTemplate>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <VerticalStackLayout Padding="10">
+                            <Label
+                                Margin="0,10"
+                                FontAttributes="Bold"
+                                FontSize="32"
+                                Text="{Binding Name}" />
+                            <Label Text="{Binding Description}" />
+                            <HorizontalStackLayout>
+                                <Border
+                                    Margin="0,20"
+                                    Padding="5"
+                                    BackgroundColor="White"
+                                    Stroke="#512BD4">
+                                    <Border.Shadow>
+                                        <Shadow
+                                            Brush="#512BD4"
+                                            Opacity="1"
+                                            Radius="5" />
+                                    </Border.Shadow>
+                                    <Label Text="{Binding LaunchYear}" />
+                                </Border>
+                                <Border
+                                    Margin="20"
+                                    Padding="5"
+                                    BackgroundColor="White"
+                                    Stroke="#512BD4">
+                                    <Border.Shadow>
+                                        <Shadow
+                                            Brush="#512BD4"
+                                            Opacity="1"
+                                            Radius="5" />
+                                    </Border.Shadow>
+                                    <Label Text="{Binding Duration}" />
+                                </Border>
+                            </HorizontalStackLayout>
+                            <BoxView HeightRequest="1" Color="#512BD4" />
+                        </VerticalStackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+                <CollectionView.GroupFooterTemplate>
+                    <DataTemplate>
+                        <HorizontalStackLayout Padding="10" BackgroundColor="#F2F2F2">
+                            <Label Text="Fim " />
+                            <Label Text="{Binding CompanyName}" />
+                        </HorizontalStackLayout>
+                    </DataTemplate>
+                </CollectionView.GroupFooterTemplate>
+            </CollectionView>
+        </RefreshView>
+        <Button
+            Margin="10"
+            Padding="10"
+            BorderColor="#512BD4"
+            BorderWidth="2"
+            Clicked="Button_Clicked"
+            HorizontalOptions="End"
+            Text="Vá para o índice 5"
+            VerticalOptions="End" />
+    </Grid>
 </ContentPage>
