--- a/AppMAUIGallery/Views/Lists/DataTemplateSelectorPage.xaml
+++ b/AppMAUIGallery/Views/Lists/DataTemplateSelectorPage.xaml
@@ -3,11 +3,13 @@
     x:Class="AppMAUIGallery.Views.Lists.DataTemplateSelectorPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:utils="clr-namespace:AppMAUIGallery.Views.Lists.Utils"
     Title="DataTemplateSelectorPage">
     <ContentPage.Resources>
         <DataTemplate x:Key="DataTemplateMovieDefault">
             <Grid
                 Padding="10"
+                BackgroundColor="White"
                 ColumnDefinitions="*, 40"
                 RowDefinitions="Auto, Auto">
                 <Label FontAttributes="Bold" Text="{Binding Name}" />
@@ -36,6 +38,7 @@
                     Grid.Column="1"
                     VerticalOptions="Center">
                     <Image
+                        Margin="0,10,0,0"
                         HorizontalOptions="Center"
                         Source="clock.png"
                         WidthRequest="20" />
@@ -43,8 +46,15 @@
                 </VerticalStackLayout>
             </Grid>
         </DataTemplate>
+
+        <utils:MovieTemplateSelector
+            x:Key="MovieTemplateSelector"
+            TemplateDefaultMovie="{StaticResource DataTemplateMovieDefault}"
+            TemplateLongMovie="{StaticResource DataTemplateLongMovie}" />
     </ContentPage.Resources>
-    <VerticalStackLayout>
-        <CollectionView x:Name="collectionViewControl" ItemTemplate="{StaticResource DataTemplateLongMovie}" />
-    </VerticalStackLayout>
+    <ScrollView x:Name="scroll">
+        <VerticalStackLayout Padding="10">
+            <CollectionView x:Name="collectionViewControl" ItemTemplate="{StaticResource MovieTemplateSelector}" />
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
