--- a/AppMAUIGallery/Views/MainPage.xaml
+++ b/AppMAUIGallery/Views/MainPage.xaml
@@ -4,11 +4,20 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="MainPage">
-    <VerticalStackLayout>
-        <Label
-            FontSize="36"
-            HorizontalOptions="Center"
-            Text="Conteudo da pagina inicial"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
+    <CollectionView x:Name="componentCollection">
+        <CollectionView.Header>
+            <Entry Margin="10" Placeholder="Pesquisa..." TextChanged="Entry_TextChanged"/>
+        </CollectionView.Header>
+        <CollectionView.ItemTemplate>
+            <DataTemplate>
+                <VerticalStackLayout Padding="20,10">
+                    <VerticalStackLayout.GestureRecognizers>
+                        <TapGestureRecognizer CommandParameter="{Binding Page}" Tapped="OnTapComponent" />
+                    </VerticalStackLayout.GestureRecognizers>
+                    <Label FontAttributes="Bold" Text="{Binding Name}" />
+                    <Label Text="{Binding Description}" TextColor="{StaticResource Gray500}" />
+                </VerticalStackLayout>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 </ContentPage>
