--- a/AppMAUIGallery/Views/Menu.xaml
+++ b/AppMAUIGallery/Views/Menu.xaml
@@ -4,30 +4,46 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Title="Menu"
-    Padding="30"
     BackgroundColor="#F3F3F3">
 
-    <ScrollView>
-        <VerticalStackLayout Spacing="20">
-            <Label
-                Margin="10"
-                FontFamily="OpenSansSemibold"
-                FontSize="28"
-                HorizontalOptions="Center"
-                Text="MAUI - Gallery"
-                VerticalOptions="Center" />
+    <CollectionView x:Name="menuCollection" IsGrouped="True">
+        <CollectionView.Header>
+            <VerticalStackLayout Padding="30,0" Spacing="20">
+                <Label
+                    Margin="10"
+                    FontFamily="OpenSansSemibold"
+                    FontSize="28"
+                    HorizontalOptions="Center"
+                    Text="MAUI - Gallery"
+                    VerticalOptions="Center" />
+                <Label Text="Início">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnTapInicio" />
+                    </Label.GestureRecognizers>
+                </Label>
+                <Label Text="Extra" />
+                <Label Text="Créditos" />
+            </VerticalStackLayout>
+        </CollectionView.Header>
 
-            <Label Text="Início">
-                <Label.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="OnTapInicio" />
-                </Label.GestureRecognizers>
-            </Label>
-
-            <Label Text="Extra" />
-
-            <Label Text="Créditos" />
-
-            <VerticalStackLayout x:Name="MenuContainer" />
-        </VerticalStackLayout>
-    </ScrollView>
+        <CollectionView.GroupHeaderTemplate>
+            <DataTemplate>
+                <Label
+                    Margin="10,10"
+                    FontAttributes="Bold"
+                    Text="{Binding Name}" />
+            </DataTemplate>
+        </CollectionView.GroupHeaderTemplate>
+        <CollectionView.ItemTemplate>
+            <DataTemplate>
+                <VerticalStackLayout Padding="40,10,20,10">
+                    <VerticalStackLayout.GestureRecognizers>
+                        <TapGestureRecognizer CommandParameter="{Binding Page}" Tapped="OnTapComponent" />
+                    </VerticalStackLayout.GestureRecognizers>
+                    <Label FontAttributes="Bold" Text="{Binding Name}" />
+                    <Label Text="{Binding Description}" TextColor="{StaticResource Gray500}" />
+                </VerticalStackLayout>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 </ContentPage>
