--- a/AppMAUIGallery/FlyoutMenu.xaml
+++ b/AppMAUIGallery/FlyoutMenu.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:AppMAUIGallery.Views"
     Title="FlyoutMenu"
+    IsPresentedChanged="FlyoutPage_IsPresentedChanged"
     FlyoutLayoutBehavior="Popover">
 
     <FlyoutPage.Flyout>
