--- a/AppMAUIGallery/Views/Shells/Pages/Page04.xaml
+++ b/AppMAUIGallery/Views/Shells/Pages/Page04.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppMAUIGallery.Views.Shells.Page04"
+             x:Class="AppMAUIGallery.Views.Shells.Pages.Page04"
              Title="Page04">
     <VerticalStackLayout>
         <Label 
