--- a/AppShoppingCenter/Resources/Styles/ExplicitStyles.xaml
+++ b/AppShoppingCenter/Resources/Styles/ExplicitStyles.xaml
@@ -5,13 +5,13 @@
     
     <Style TargetType="Label" x:Key="PrimaryText">
         <Setter Property="TextColor" Value="#000000"/>
-        <Setter Property="FontFamily" Value="#OpenSansBold"/>
+        <Setter Property="FontFamily" Value="OpenSansBold"/>
         <Setter Property="FontSize" Value="14"/>
     </Style>
     
     <Style TargetType="Label" x:Key="SecondaryText">
         <Setter Property="TextColor" Value="#A0A0A0"/>
-        <Setter Property="FontFamily" Value="#OpenSansLight"/>
+        <Setter Property="FontFamily" Value="OpenSansLight"/>
         <Setter Property="FontSize" Value="12"/>
     </Style>
 </ResourceDictionary>
