--- a/AppShoppingCenter/Views/Cinemas/ListPage.xaml
+++ b/AppShoppingCenter/Views/Cinemas/ListPage.xaml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:AppShoppingCenter.ViewModels.Cinemas"
              x:Class="AppShoppingCenter.Views.Cinemas.ListPage"
              Title="ListPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <ContentPage.BindingContext>
+        <vm:ListPageViewModel x:Name="vm"/>
+    </ContentPage.BindingContext>
+    
+    <Grid RowDefinitions="70,*">
+        <VerticalStackLayout Padding="50,0,0,0" VerticalOptions="End">
+            <Label Text="CINEMIX"/>   
+            <Label Text="Em cartaz"/>
+        </VerticalStackLayout>
+        
+        <CarouselView Grid.Row="1" ItemsSource="{Binding Movies}">
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout>
+                        <VerticalStackLayout.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding Source={x:Reference vm}, Path=TapMovieGoToDetailPageCommand}" CommandParameter="{Binding .}"/>
+                        </VerticalStackLayout.GestureRecognizers>
+                        <Border StrokeThickness="0" StrokeShape="RoundRectangle 30">
+                            <Image Source="{Binding Cover}"/>
+                        </Border>
+                        <Label Text="{Binding Duration}"/>
+                        <Label Text="{Binding Title}"/>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+    </Grid>
 </ContentPage>
