--- a/AppShoppingCenter/Views/Restaurants/ListPage.xaml
+++ b/AppShoppingCenter/Views/Restaurants/ListPage.xaml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:vm="clr-namespace:AppShoppingCenter.ViewModels.Restaurants"
              x:Class="AppShoppingCenter.Views.Restaurants.ListPage"
              Title="ListPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <ContentPage.BindingContext>
+        <vm:ListPageViewModel x:Name="vm"/>
+    </ContentPage.BindingContext>
+    
+    <Grid RowDefinitions="50,*" Padding="20,20,20,0">
+        <Border StrokeShape="RoundRectangle 5">
+            <Border.Stroke>
+                <LinearGradientBrush EndPoint="1,1">
+                    <GradientStop Color="#F5AF19" Offset="0.1"/>
+                    <GradientStop Color="#FF0000" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Border.Stroke>
+            <Entry Placeholder="Pesquisar por restaurante" Text="{Binding SearchText}">
+                <Entry.Behaviors>
+                    <toolkit:EventToCommandBehavior EventName="TextChanged" Command="{Binding SearchTextChangedCommand}"/>
+                </Entry.Behaviors>
+            </Entry>
+        </Border>
+
+        <CollectionView Margin="0,20,0,0" ItemsSource="{Binding RestaurantsFiltered}" Grid.Row="1" EmptyView="Nenhum registro encontrado">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout>
+                        <Grid ColumnDefinitions="1*, 3*" RowDefinitions="20, 45" Margin="0,15">
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Source={x:Reference vm}, Path=RestaurantTapGoToDetailPageCommand}" CommandParameter="{Binding .}"/>
+                            </Grid.GestureRecognizers>
+
+                            <Image Source="{Binding Logo}" Grid.Column="0" Grid.RowSpan="2" Margin="0,0,13,0"/>
+                            <Label Text="{Binding Name}"  Grid.Column="1" Style="{StaticResource PrimaryText}" Grid.Row="0"/>
+                            <Label Text="{Binding Description}" VerticalOptions="End" Grid.Column="1" Grid.Row="1" FontSize="12" MaxLines="2" Style="{StaticResource SecondaryText}"/>
+                        </Grid>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+     </Grid>
 </ContentPage>
