--- a/AppShoppingCenter/Views/Cinemas/DetailPage.xaml
+++ b/AppShoppingCenter/Views/Cinemas/DetailPage.xaml
@@ -1,12 +1,58 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:AppShoppingCenter.ViewModels.Cinemas"
+             xmlns:media="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="AppShoppingCenter.Views.Cinemas.DetailPage"
              Title="DetailPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
+
+    <ContentPage.BindingContext>
+        <vm:DetailPageViewModel x:Name="vm"/>
+    </ContentPage.BindingContext>
+    
+    <Grid>
+        <Image 
+            Source="{Binding Movie.Cover}"
+            VerticalOptions="Start"
             HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+        <media:MediaElement x:Name="player" IsVisible="False" ShouldLoopPlayback="True" Source="{Binding Movie.Trailer}" VerticalOptions="Start" HeightRequest="{OnIdiom Tablet=500, Phone=320}" ShouldShowPlaybackControls="False"/>
+
+        <Image x:Name="playPauseBtn" Source="play.png" VerticalOptions="Start" WidthRequest="50"  HorizontalOptions="Center" Margin="{OnIdiom Tablet='0,230,0,0', Phone='0,110,0,0'}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Tapped="PlayPause"/>
+            </Image.GestureRecognizers>
+        </Image>
+        
+        <Image Source="close.png" VerticalOptions="Start" WidthRequest="{OnIdiom Tablet=35, Phone=29}"  HorizontalOptions="Start" Margin="{OnIdiom Tablet=25, Phone=20}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Tapped="OnTapCloseDetailPage"/>
+            </Image.GestureRecognizers>
+        </Image>
+
+        <Border Background="#AAFFFFFF" StrokeShape="RoundRectangle 30" WidthRequest="{OnIdiom Tablet=130, Phone=82}" HeightRequest="{OnIdiom Tablet=50, Phone=28}" BackgroundColor="Transparent" VerticalOptions="Start" HorizontalOptions="End" Margin="15">
+            <HorizontalStackLayout  Spacing="5" Padding="10" HorizontalOptions="Center">
+                <Image Source="clock.png" WidthRequest="{OnIdiom Tablet=30, Phone=19}"/>
+                <Label Text="{Binding Movie.Duration}" Style="{StaticResource CinemaDurationText}"/>
+            </HorizontalStackLayout>
+        </Border>
+
+        <Border x:Name="movieBorder" StrokeThickness="0" BackgroundColor="White" StrokeShape="RoundRectangle 30,30,0,0" Padding="50" Margin="{OnIdiom Tablet='0,500,0,0', Phone='0,250,0,0'}">
+            <VerticalStackLayout>
+                <Label 
+         Text="{Binding Movie.Title}"
+         VerticalOptions="Center" 
+         HorizontalOptions="Center" 
+         Style="{StaticResource PrimaryText}" 
+         HorizontalTextAlignment="Center"/>
+                <Label 
+                    Padding="100,0"
+         Margin="0,35,0,0"
+         Text="{Binding Movie.Description}"
+         VerticalOptions="Center" 
+         HorizontalOptions="Center" 
+         Style="{StaticResource CinemaDetailText}" />
+            </VerticalStackLayout>
+        </Border>
+    </Grid>
 </ContentPage>
