--- a/AppShoppingCenter/Resources/Styles/ExplicitStyles.xaml
+++ b/AppShoppingCenter/Resources/Styles/ExplicitStyles.xaml
@@ -39,4 +39,31 @@
         <Setter Property="FontFamily" Value="OpenSansLight"/>
         <Setter Property="FontSize" Value="{OnIdiom Tablet=18, Phone=12}"/>
     </Style>
+    
+    <Style TargetType="Label" x:Key="HeadingBase">
+        <Setter Property="FontSize" Value="24"/>
+    </Style>
+    
+    <Style TargetType="Label" x:Key="TicketHeadingText" BasedOn="{StaticResource HeadingBase}">
+        <Setter Property="TextColor" Value="Black"/>
+    </Style>
+
+    <Style TargetType="Label" x:Key="TicketHeadingText02" BasedOn="{StaticResource HeadingBase}">
+        <Setter Property="TextColor" Value="#FF5524"/>
+        <Setter Property="TextTransform" Value="Uppercase"/>
+    </Style>
+
+    <Style TargetType="Border" x:Key="BorderStyle">
+        <Setter Property="Stroke" Value="Black"/>
+        <Setter Property="StrokeShape" Value="RoundRectangle 5"/>
+        <Setter Property="StrokeThickness" Value="1"/>
+    </Style>
+
+    <Style TargetType="Button" x:Key="ButtonStyle">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontFamily" Value="OpenSansRegular"/>
+        <Setter Property="BackgroundColor" Value="#FF5524"/>
+        <Setter Property="HeightRequest" Value="50"/>
+        <Setter Property="CornerRadius" Value="25"/>
+    </Style>
 </ResourceDictionary>
