--- a/AppShoppingCenter/Views/Tickets/ResultPage.xaml
+++ b/AppShoppingCenter/Views/Tickets/ResultPage.xaml
@@ -2,14 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:AppShoppingCenter.ViewModels.Tickets"
-             x:Class="AppShoppingCenter.Views.Tickets.ListPage"
-             Title="ListPage">
+             x:Class="AppShoppingCenter.Views.Tickets.ResultPage"
+             Title="ResultPage">
     <ContentPage.BindingContext>
-        <vm:ListPageViewModel x:Name="vm"/>
+        <vm:ResultPageViewModel x:Name="vm"/>
     </ContentPage.BindingContext>
     <VerticalStackLayout>
         <Label 
-            Text="List"
+            Text="Result"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
